deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devopsbp-deployment
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: devopsbp
  template:
    metadata:
      labels:
        app: devopsbp
    spec:
      containers:
      - name: devopsbp
        image: gamas909/devopsbp:latest
        ports:
        - containerPort: 8000
