service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devopsbp-service
spec:
  selector:
    app: devopsbp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
